# coffeeio

./: CMakeLists.txt  CoffeeIO.cbp  CoffeeIO.depend  CoffeeIO.exe.stackdump  CoffeeIO.layout  build.sh  main.c  run.sh  testall.sh
src/: CMakeLists.txt  main.c
src/ciostack/: ciostack.c  ciostack.h
tests/: CMakeLists.txt  RunAllTests.cpp
tests/ciostack/: ciostackTest.cpp
